# rust_russian_wordle

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test_query.rs  test_utility.rs
