[package]
name = "rust_russian_wordle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.9"
rusqlite = "0.32.0"
prettytable-rs = "0.10"
unicode-segmentation = "1.8.0"
thiserror = "1.0.63"
tokio = "1.39.1"
serde_json = "1.0.120"
regex = "1.7.0"

[[bin]]
name = "rust_russian_wordle"
path = "src/main.rs"
